# wad-flask

./: .gitignore  app.db  config.py  main.py  pyproject.toml
app/: __init__.py  forms.py  models.py  routes.py
app/templates/: base.html  index.html  user.html
migrations/versions/: 2fbd020026ff_followers.py  79a0b2b7eac3_users_table.py  849328873eab_add_posts_and_followers.py
templates/: index.html
